<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.the.example.synchronization.CreateNewRecord"
    tools:showIn="@layout/activity_create_new_record">

    <TextView
        android:id="@+id/createRecordTitle_TextView_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createRecordTitle_TextView_string"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@color/colorAccent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/FirstName_string"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/fName_EditText_id"
                android:layout_width="211dp"
                android:layout_height="wrap_content"
                android:hint="@string/enterName_hint" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/LastName_string"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/lName_EditText_id"
                android:layout_width="211dp"
                android:layout_height="wrap_content"
                android:hint="@string/LastName_hint" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="45dp"
                android:layout_marginRight="45dp"
                android:text="@string/sex_string"
                android:textStyle="bold" />
            <RadioGroup
                android:id="@+id/radioGroup_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/first_RadioButton_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male_checkBox" />

                <RadioButton
                    android:id="@+id/second_RadioButton_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female_checkbox" />
            </RadioGroup>



        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/age_string"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/age_EditText_id"
                android:layout_width="211dp"
                android:layout_height="wrap_content"
                android:hint="@string/age_hint"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/comment_string"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/comment_EditText_id"
                android:layout_width="211dp"
                android:layout_height="wrap_content"
                android:hint="@string/comment_hint"
                android:inputType="" />

        </LinearLayout>

        <Button
            android:id="@+id/saveRecord_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/save_record"
            android:background="@android:color/holo_blue_dark"
            android:textColor="@android:color/white"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:shadowColor="@android:color/holo_green_dark"
            />
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>
