<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.the.example.synchronization.MainActivity"
    android:background="@drawable/background2">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

            <android.support.v7.widget.Toolbar
                android:id="@+id/mainActivity_toolbar_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:title="@string/app_name"
                android:gravity="center"
                android:textAlignment="center"
                app:titleTextAppearance="@style/Base.TextAppearance.AppCompat.Large"
                app:titleTextColor="@color/colorAccent"
                android:background="@color/listView_background_color"


                />



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:orientation="vertical"
            android:layout_gravity="center">

            <Button
                android:id="@+id/createRecord_Button_id"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:background="@drawable/roundbutton"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_marginBottom="25dp"
                android:text="@string/createRecord_Button_string"
                android:textColor="@color/colorAccent"/>

            <Button
                android:id="@+id/synchronizationButton_id"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/roundbutton"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/synchronize_Button_string"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>


    </android.support.design.widget.CoordinatorLayout>
</android.support.v4.widget.DrawerLayout>
